--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,45 @@
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- <meta name="generator" content={Astro.generator} /> -->
+    <title>Astro Basics</title>
+  </head>
+  <body
+    class="overflow-y-scroll overflow-x-hidden bg-neutral-50 text-secondary font-sans leading-loose after:fixed after:top-0 after:left-0 after:w-full after:h-full after:-z-50"
+  >
+    <slot />
+    <script src="../assets/js/main.js"></script>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"
+    ></script>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  body::after {
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      theme("colors.red.50") 100%
+    );
+  }
+</style>
+
+<style is:global>
+  ::selection {
+    @apply bg-primary text-neutral-50;
+  }
+
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
 </style>
