--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -2,9 +2,9 @@
 ></canvas>
 
 <style>
-  canvas {
+  .fadeIn {
     opacity: 0;
-    animation: fadeIn 1000ms ease-in-out 500ms forwards;
+    animation: fadeIn 1000ms ease-in-out forwards;
   }
 
   @keyframes fadeIn {
