--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -1,10 +1,10 @@
 ---
 import Event from "../components/Event.astro";
+import Section from "./Section.astro";
 ---
 
-<section id="agenda" class="container py-20">
-  <h2 class="text-6xl md:text-9xl font-thin mb-10">Agenda</h2>
-  <div role="region" tabindex="0" class="overflow-auto w-full">
+<Section id="agenda" title="Agenda">
+  <div role="region" tabindex="0" class="container overflow-auto w-full">
     <table class="h-full w-full border-spacing-px text-left border-collapse">
       <caption class="text-left mt-2 opacity-50"
         >* La agenda puede sufrir cambios.</caption
@@ -198,7 +198,7 @@ import Event from "../components/Event.astro";
       </tbody>
     </table>
   </div>
-</section>
+</Section>
 
 <style>
   caption {
