--- a/src/sections/Agenda.astro
+++ b/src/sections/Agenda.astro
@@ -1,6 +1,6 @@
 ---
 import Event from "../components/Event.astro";
-import Section from "./Section.astro";
+import Section from "../components/Section.astro";
 ---
 
 <Section id="agenda" title="Agenda">
