--- a/src/sections/Speakers.astro
+++ b/src/sections/Speakers.astro
@@ -1,6 +1,6 @@
 ---
 import data from "../assets/data.json";
-import Section from "./Section.astro";
+import Section from "../components/Section.astro";
 ---
 
 <Section id="ponentes" title="Ponentes confirmados">
