--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,13 @@ import Layout from "../layouts/Layout.astro";
 import Welcome from "../sections/Welcome.astro";
 ---
 
-<Layout>
+<Layout
+  title="Madrid4Tech IV Edición"
+  description="Evento Madrid4Tech organizado por IMMUNE Technology Institute para unir empresas y profesionales de la tecnología."
+  keywords="immune, evento, tecnología"
+  canonical="https://madridfortech.immune.institute/"
+  robots="index, follow"
+  img="https://madridfortech.immune.institute/share.webp"
+>
   <Welcome />
 </Layout>
