--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -8,7 +8,7 @@ import Canvas from "../components/Canvas.astro";
   class="overflow-hidden min-h-dvh px-5 py-10 flex flex-col items-center gap-4 text-center after:absolute after:top-0 after:left-0 after:w-full after:h-full after:-z-40"
 >
   <Logo />
-  <p class="mb-auto uppercase tracking-ch">Innovación, Talento y Empresas</p>
+  <h1 class="mb-auto uppercase tracking-ch">Innovación, Talento y Empresas</h1>
   <p>
     Nos vemos en la <strong>{data.edition} edición</strong> de encuentro de talento
     tecnológico de Madridfortech,
