--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -1,33 +1,27 @@
 ---
 import data from "../assets/data.json";
 import Logo from "../assets/icons/Logo.astro";
-import Canvas from "../components/Canvas.astro";
+import Background from "../components/Background.astro";
+import Countdown from "../components/Countdown.astro";
 ---
 
-<section
-  class="overflow-hidden min-h-dvh px-5 py-10 flex flex-col items-center gap-4 text-center after:absolute after:top-0 after:left-0 after:w-full after:h-full after:-z-40"
->
-  <Logo />
-  <h1 class="mb-auto uppercase tracking-ch">Innovación, Talento y Empresas</h1>
-  <p>
-    Nos vemos en la <strong>{data.edition} edición</strong> de encuentro de talento
-    tecnológico de Madridfortech,
-    <br />
-    online y en nuestro campus en <a
-      href={data.legal.address.url}
-      target="_blank"
-      class="underline">{data.legal.address.text}</a
-    >
-  </p>
-  <Canvas />
+<section class="overflow-hidden min-h-dvh">
+  <div
+    class="w-full h-[75dvh] p-5 flex flex-col items-center justify-center text-neutral-50 text-center"
+  >
+    <Logo />
+    <h1 class="uppercase tracking-ch">Innovación, Talento y Empresas</h1>
+    <Countdown />
+    <p>
+      Nos vemos en la <strong>{data.edition} edición</strong> de encuentro de talento
+      tecnológico de Madridfortech,
+      <br />
+      online y en nuestro campus en <a
+        href={data.legal.address.url}
+        target="_blank"
+        class="underline">{data.legal.address.text}</a
+      >
+    </p>
+  </div>
+  <Background />
 </section>
-
-<style>
-  section::after {
-    background: radial-gradient(
-      circle,
-      theme("colors.neutral.50") 0%,
-      theme("colors.red.50") 100%
-    );
-  }
-</style>
