--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@ import Welcome from "../sections/Welcome.astro";
   title="Madrid4Tech VI Edición"
   description="Evento Madrid4Tech organizado por IMMUNE Technology Institute para unir empresas y profesionales de la tecnología."
   keywords="immune, evento, tecnología"
-  canonical="https://madridfortech.immune.institute/"
+  canonical="https://madridfortech.com/"
   robots="index, follow"
-  img="https://madridfortech.immune.institute/share.webp"
+  img="https://madridfortech.com/share.webp"
 >
   <Welcome />
 </Layout>
