--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -5,7 +5,7 @@ import Background from "../components/Background.astro";
 import Countdown from "../components/Countdown.astro";
 ---
 
-<section class="overflow-hidden min-h-dvh">
+<section class="overflow-hidden min-h-dvh bg-secondary isolate">
   <div
     class="w-full h-[75dvh] p-5 flex flex-col items-center justify-center text-neutral-50 text-center"
   >
