--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,9 +58,25 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
     @apply bg-primary text-neutral-50;
   }
 
+  /* Animations */
+
+  .fadeIn {
+    animation: fadeIn 500ms ease-in-out 500ms forwards;
+  }
+
+  .fadeOut {
+    animation: fadeOut 500ms ease-in-out 500ms forwards;
+  }
+
   @keyframes fadeIn {
     to {
       opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    to {
+      opacity: 0;
     }
   }
 </style>
