Change background video

--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -7,7 +7,7 @@ import Countdown from "../components/Countdown.astro";
 
 <section class="overflow-hidden min-h-dvh bg-secondary isolate">
   <div
-    class="w-full h-[75dvh] p-5 flex flex-col items-center justify-center text-neutral-50 text-center"
+    class="w-full h-dvh p-5 flex flex-col items-center justify-center text-neutral-50 text-center"
   >
     <Logo />
     <h1 class="uppercase tracking-ch">Innovación, Talento y Empresas</h1>
