--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -1,5 +1,5 @@
 <video
-  class="h-screen w-full object-cover absolute -z-10 left-0 top-0 hue-rotate-[150deg] fadeIn opacity-0"
+  class="h-screen w-full object-cover absolute -z-10 left-0 top-0 hue-rotate-[150deg] fadeIn opacity-0 brightness-50"
   autoplay
   loop
   muted
