--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
       robots={robots}
       img={img}
     />
+    <meta name="theme-color" content="#050000" />
   </head>
   <body
     class="overflow-y-scroll overflow-x-hidden bg-neutral-50 text-secondary font-sans leading-loose after:fixed after:top-0 after:left-0 after:w-full after:h-full after:-z-50"
