Add logo margin

--- a/src/assets/icons/Logo.astro
+++ b/src/assets/icons/Logo.astro
@@ -3,7 +3,7 @@
   width="708"
   height="81"
   fill="none"
-  class="text-primary max-w-full h-auto shrink-0"
+  class="text-primary max-w-full h-auto shrink-0 mb-2"
   viewBox="0 0 708 81"
   ><g fill="currentColor" clip-path="url(#a)"
     ><path d="M518.89 1.218h-47.932v13.599h17.1V79.98h13.732V14.95h17.1V1.218Z"
