--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Background from "../components/Background.astro";
 import Layout from "../layouts/Layout.astro";
 import Welcome from "../sections/Welcome.astro";
 ---
@@ -12,4 +13,5 @@ import Welcome from "../sections/Welcome.astro";
   img="https://madridfortech.com/share.webp"
 >
   <Welcome />
+  <Background />
 </Layout>
