Change countdown order

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -1,4 +1,4 @@
-<p id="countdown" class="text-4xl py-10">
+<p id="countdown" class="text-4xl">
   <span id="days"></span>
   <span id="hours"></span>
   <span id="minutes"></span>
