--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -15,9 +15,9 @@ import Countdown from "../components/Countdown.astro";
   </p>
   <div class="my-auto">
     <Logo />
-    <h1 class="uppercase tracking-ch">Innovación, Talento y Empresas</h1>
+    <h1 class="uppercase tracking-ch mb-5">Innovación, Talento y Empresas</h1>
+    <Countdown />
   </div>
-  <Countdown />
   <p>
     Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de encuentro
     de talento tecnológico de Madridfortech,
