--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -3,29 +3,30 @@ import data from "../assets/data.json";
 import CalendarEvent from "../assets/icons/CalendarEvent.astro";
 import Logo from "../assets/icons/Logo.astro";
 import Countdown from "../components/Countdown.astro";
+import Form from "../components/Form.astro";
 ---
 
 <section
-  class="w-full min-h-dvh p-5 flex flex-col items-center justify-center text-neutral-50 text-center"
+  class="w-full min-h-dvh p-5 grid lg:grid-cols-[1fr_512px] gap-5 text-neutral-50"
 >
-  <p
-    class="flex items-center gap-2 text-xl p-5 backdrop-blur bg-neutral-50/10 border border-neutral-50/10"
-  >
-    <CalendarEvent />{data.date}
-  </p>
-  <div class="my-auto">
+  <div class="flex flex-col justify-center items-center text-center py-10">
     <Logo />
     <h1 class="uppercase tracking-ch mb-5">Innovación, Talento y Empresas</h1>
     <Countdown />
   </div>
-  <p>
-    Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de encuentro
-    de talento tecnológico de Madridfortech,
-    <br />
-    online y en nuestro campus en <a
-      href={data.legal.address.url}
-      target="_blank"
-      class="underline">{data.legal.address.text}</a
+  <div class="flex flex-col gap-5">
+    <p
+      class="flex items-center gap-2 text-xl p-5 backdrop-blur border border-neutral-50/10"
     >
-  </p>
+      <CalendarEvent />{data.date}
+    </p>
+    <Form />
+    <p class="text-center">
+      Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de
+      encuentro de talento tecnológico de Madridfortech, online y en nuestro campus
+      en <a href={data.legal.address.url} target="_blank" class="underline"
+        >{data.legal.address.text}</a
+      >
+    </p>
+  </div>
 </section>
