Change background video

--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -16,7 +16,7 @@ import Form from "../components/Form.astro";
   </div>
   <div class="flex flex-col gap-5">
     <p
-      class="flex items-center gap-2 text-xl p-5 backdrop-blur border border-neutral-50/10"
+      class="flex items-center justify-center gap-2 text-xl p-5 backdrop-blur border border-neutral-50/10 text-center"
     >
       <CalendarEvent />{data.date}
     </p>
