--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,7 +108,7 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
   }
 
   select {
-    appearance: none;
+    @apply appearance-none;
   }
 
   .inputs-list {
