--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Background from "../components/Background.astro";
 import Layout from "../layouts/Layout.astro";
+import Footer from "../sections/Footer.astro";
 import Welcome from "../sections/Welcome.astro";
 ---
 
@@ -14,4 +15,5 @@ import Welcome from "../sections/Welcome.astro";
 >
   <Welcome />
   <Background />
+  <Footer />
 </Layout>
