--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -1,5 +1,5 @@
 <video
-  class="h-dvh w-full object-cover fixed -z-10 left-0 top-0 fadeIn opacity-0 brightness-50"
+  class="h-dvh w-full object-cover absolute -z-10 left-0 top-0 fadeIn opacity-0 brightness-50"
   autoplay
   loop
   muted
