--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Background from "../components/Background.astro";
 import Layout from "../layouts/Layout.astro";
+import Business from "../sections/Business.astro";
 import Footer from "../sections/Footer.astro";
 import Welcome from "../sections/Welcome.astro";
 ---
@@ -14,6 +14,6 @@ import Welcome from "../sections/Welcome.astro";
   img="https://madridfortech.com/share.webp"
 >
   <Welcome />
-  <Background />
+  <Business />
   <Footer />
 </Layout>
