--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -1,12 +1,13 @@
 ---
 import data from "../assets/data.json";
 import Logo from "../assets/icons/Logo.astro";
+import Background from "../components/Background.astro";
 import Countdown from "../components/Countdown.astro";
 import Form from "../components/Form.astro";
 ---
 
 <section
-  class="w-full min-h-dvh p-5 grid lg:grid-cols-[1fr_512px] gap-5 text-neutral-50"
+  class="relative w-full min-h-dvh p-5 grid lg:grid-cols-[1fr_512px] gap-5 text-neutral-50"
 >
   <div class="flex flex-col justify-center items-center text-center py-10">
     <p class="uppercase tracking-ch mb-5">{data.date}</p>
@@ -15,4 +16,5 @@ import Form from "../components/Form.astro";
     <Countdown />
   </div>
   <Form />
+  <Background />
 </section>
