--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -2,7 +2,7 @@
 import data from "../assets/data.json";
 ---
 
-<footer class="p-5">
+<footer class="container p-5">
   <p class="text-center">
     Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de encuentro
     de talento tecnológico de Madridfortech, online y en nuestro campus en <a
