--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,10 +28,33 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
       img={img}
     />
     <meta name="theme-color" content="#020617" />
+    <!-- Google Tag Manager -->
+    <script is:inline>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PNQK5NN");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body
     class="overflow-x-hidden bg-background text-neutral-50 font-sans leading-loose"
   >
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PNQK5NN"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+    <!-- End Google Tag Manager (noscript) -->
     <slot />
     <script src="../assets/js/main.js"></script>
     <script
