--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -1,4 +1,4 @@
-<p id="countdown" class="text-4xl">
+<p id="countdown" class="text-4xl mb-5">
   <span id="days"></span>
   <span id="hours"></span>
   <span id="minutes"></span>
