--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@ a {
 /* Form */
 
 .hbspt-form {
-    @apply backdrop-blur-3xl border border-neutral-50/10 p-5 h-full flex items-center opacity-0 transition-opacity duration-500 ease-in-out;
+    @apply backdrop-blur-3xl flex items-center opacity-0 transition-opacity duration-500 ease-in-out;
 }
 
 .hbspt-form[data-ready] {
