--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,11 +64,7 @@ a {
 /* Form */
 
 .hbspt-form {
-    @apply backdrop-blur-3xl flex items-center opacity-0 transition-opacity duration-500 ease-in-out;
-}
-
-.hbspt-form[data-ready] {
-    @apply opacity-100;
+    @apply flex items-center;
 }
 
 form {
