--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,10 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
       })(window, document, "script", "dataLayer", "GTM-PNQK5NN");
     </script>
     <!-- End Google Tag Manager -->
+    <meta
+      name="facebook-domain-verification"
+      content="yz0ilmxdupdvfrvzplkpfz80cdpr2x"
+    />
   </head>
   <body
     class="overflow-y-scroll overflow-x-hidden bg-background text-neutral-50 font-sans leading-loose"
