--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
       img={img}
     />
     <meta name="theme-color" content="#020617" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <!-- Google Tag Manager -->
     <script is:inline>
       (function (w, d, s, l, i) {
