--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 <nav
-  class="sticky top-0 bg-primary text-neutral-50 py-2 flex justify-center gap-5 z-50"
+  class="sticky top-0 bg-red-600 text-neutral-50 py-2 flex justify-center gap-5 z-50"
 >
   <a href="#ponentes">Ponentes</a>
   <a href="#">Empresas</a>
