--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const { title, description, keywords, canonical, robots, img } = Astro.props;
     />
   </head>
   <body
-    class="overflow-y-scroll overflow-x-hidden bg-background text-neutral-50 font-sans leading-loose"
+    class="overflow-y-scroll overflow-x-hidden bg-slate-950 text-slate-100 font-sans leading-loose"
   >
     <!-- Google Tag Manager (noscript) -->
     <noscript
