--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,39 @@
 ---
+import Sticky from "../components/Sticky.astro";
 import Layout from "../layouts/Layout.astro";
-import Business from "../sections/Business.astro";
 import Footer from "../sections/Footer.astro";
-import Welcome from "../sections/Welcome.astro";
+import Speakers from "../sections/Speakers.astro";
+import Agenda from "../sections/Agenda.astro";
+import Hero from "../sections/Hero.astro";
+import data from "../assets/data.json";
+import Talento from "../sections/Talento.astro";
+import Campus from "../sections/Campus.astro";
+import Form from "../components/Form.astro";
+import Modal from "../components/Modal.astro";
+import Hub from "../sections/Hub.astro";
+import Dots from "../sections/Dots.astro";
+import Audiencia from "../sections/Audiencia.astro";
 ---
 
 <Layout
-  title="Madrid4Tech VI Edición"
-  description="Evento Madrid4Tech organizado por IMMUNE Technology Institute para unir empresas y profesionales de la tecnología."
-  keywords="immune, evento, tecnología"
+  title={data.seo.title}
+  description={data.seo.description}
+  keywords={data.seo.keywords}
   canonical="https://madridfortech.com/"
   robots="index, follow"
   img="https://madridfortech.com/share.webp"
 >
-  <Welcome />
-  <Business />
+  <Hero />
+  <Sticky />
+  <Dots />
+  <Talento />
+  <!-- <Speakers /> -->
+  <!-- <Agenda /> -->
+  <Hub />
+  <Campus />
+  <Audiencia />
   <Footer />
+  <Modal id="FormModal" title="¡Apúntate al evento!">
+    <Form />
+  </Modal>
 </Layout>
