--- a/src/sections/Talento.astro
+++ b/src/sections/Talento.astro
@@ -6,7 +6,7 @@ import Image from "astro/components/Image.astro";
 ---
 
 <Section title="Talento" subtitle="digital">
-  <div class="container mb-10">
+  <div class="container">
     {
       data.talento.map((paragraph) => (
         <p class="max-w-prose mb-4">{paragraph}</p>
@@ -16,6 +16,6 @@ import Image from "astro/components/Image.astro";
   <Image
     src={BuscanTalento}
     alt="Buscan Talento"
-    class="absolute top-0 right-0 -z-10 w-full h-full object-cover mask-l-from-0 mask-l-to-75% hidden md:block"
+    class="absolute top-0 right-0 -z-10 w-full h-full object-cover object-[80%] opacity-10 lg:opacity-100 lg:mask-l-from-0 lg:mask-l-to-75%"
   />
 </Section>
