--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -19,7 +19,7 @@ import data from "../assets/data.json";
       </div>
     )
   }
-  <p class="text-center">
+  <p class="text-center mb-4">
     Nos vemos este {data.date} en la <strong>{data.edition} edición</strong> de encuentro
     de talento tecnológico de Madridfortech, online y en nuestro campus en <a
       href={data.legal.address.url}
@@ -27,7 +27,7 @@ import data from "../assets/data.json";
       class="underline">{data.legal.address.text}</a
     >
   </p>
-  <nav class="flex gap-4 flex-wrap justify-center">
+  <nav class="flex gap-x-4 flex-wrap justify-center">
     <a
       href="https://immune.institute/aviso-legal/"
       target="_blank"
