--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Modal from "../components/Modal.astro";
 import Hub from "../sections/Hub.astro";
 import Dots from "../sections/Dots.astro";
 import Audiencia from "../sections/Audiencia.astro";
+import Pilares from "../sections/Pilares.astro";
 ---
 
 <Layout
@@ -27,6 +28,7 @@ import Audiencia from "../sections/Audiencia.astro";
   <Sticky />
   <Dots />
   <Talento />
+  <Pilares />
   <!-- <Speakers /> -->
   <!-- <Agenda /> -->
   <Hub />
