--- a/src/sections/Dots.astro
+++ b/src/sections/Dots.astro
@@ -12,9 +12,7 @@ import Section from "../components/Section.astro";
   >
     <div class="flex flex-col items-center justify-center">
       <Rocket size={64} />
-      <h2 class="text-2xl font-light uppercase mb-4">
-        <strong>Innovación</strong>
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">Innovación</h2>
       <p class="text-slate-400">
         {data.hero[0]}
       </p>
@@ -22,9 +20,7 @@ import Section from "../components/Section.astro";
     <span class="w-1 h-2/4 bg-red-600 hidden lg:block"></span>
     <div class="flex flex-col items-center justify-center">
       <Box size={64} />
-      <h2 class="text-2xl font-light uppercase mb-4">
-        <strong>Tecnología</strong>
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">Tecnología</h2>
       <p class="text-slate-400">
         {data.hero[1]}
       </p>
@@ -32,9 +28,7 @@ import Section from "../components/Section.astro";
     <span class="w-1 h-2/4 bg-red-600 hidden lg:block"></span>
     <div class="flex flex-col items-center justify-center">
       <UserSearch size={64} />
-      <h2 class="text-2xl font-light uppercase mb-4">
-        <strong>Empleo</strong>
-      </h2>
+      <h2 class="text-2xl font-light uppercase mb-4">Empleo</h2>
       <p class="text-slate-400">
         {data.hero[2]}
       </p>
