Update register button

--- a/src/components/Sticky.astro
+++ b/src/components/Sticky.astro
@@ -1,4 +1,4 @@
-<div class="sticky top-0 flex z-90">
+<div class="sticky top-0 z-90">
   <button
     id="addToCalendarButton"
     class="bg-red-600 w-full py-2 px-4 cursor-pointer uppercase"
@@ -6,7 +6,7 @@
     Añadir a mi calendario
   </button>
   <button
-    class="bg-red-700 py-2 px-4 cursor-pointer uppercase"
+    class="bg-red-700 w-full p-5 cursor-pointer uppercase"
     onclick="openFormModal()"
     type="button"
   >
