--- a/src/sections/Audiencia.astro
+++ b/src/sections/Audiencia.astro
@@ -30,7 +30,7 @@ import Section from "../components/Section.astro";
     <div>
       <span class="text-6xl font-bold text-red-600">35%</span>
       <h2 class="text-2xl font-light uppercase">
-        <strong>Talento emperimentado</strong>
+        <strong>Talento experimentado</strong>
       </h2>
       <span>8+ años</span>
       <p class="text-slate-400">
